--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,6 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const core = require('@actions/core');
             const id_token = await core.getIDToken();
             return id_token;
           result-encoding: string
@@ -32,9 +31,9 @@ jobs:
       - name: Build and Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: "12345cbb198a77a092ff885781a62a15d51ef5e3654ca11234509ab54547270704-4140ccee-e04f-424f-b4ca-3d4dd123459c00f0702071d12345"  # Force to use OIDC token
+          azure_static_web_apps_api_token: "skip"  # Force to use OIDC
           github_id_token: ${{ steps.get_oidc_token.outputs.result }}
           action: "upload"
-          app_location: "/"
+          app_location: "/" 
           api_location: ""
           output_location: "build"
